# dolan

./: .gitmodules  CMakeLists.txt
examples/example1/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: dolan.h  dolan_exceptions.h  storage.h  template_helpers.h  tensor.h  volume.h
lib/src/: dolan.cc  tensor.cc
tests/: CMakeLists.txt  volume_test.cc
